<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>db.documenter</groupId>
  <artifactId>db-documenter</artifactId>
  <version>1.0.22-SNAPSHOT</version>

  <properties>
    <java.version>25</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- Test -->
    <postgresql.version>42.7.8</postgresql.version>
    <junit.version>6.0.1</junit.version>
    <test-containers.version>2.0.2</test-containers.version>
    <mockito.version>5.20.0</mockito.version>
    <surefire.version>3.5.4</surefire.version>

    <!-- Reporting -->
    <jacoco.version>0.8.14</jacoco.version>
    <maven-javadoc.version>3.12.0</maven-javadoc.version>

    <!-- Packaging -->
    <maven-jar.version>3.5.0</maven-jar.version>
    <maven-compiler.version>3.13.0</maven-compiler.version>

    <!-- Static analysis -->
    <checkstyle.version>3.6.0</checkstyle.version>
    <jspecify.version>1.0.0</jspecify.version>
    <spotbugs.version>4.9.8.1</spotbugs.version>
    <pmd.version>3.28.0</pmd.version>
    <spotless.version>3.1.0</spotless.version>
    <findsecbugs.version>1.13.0</findsecbugs.version>
    <enforcer.version>3.5.0</enforcer.version>
    <modernizer.version>3.2.0</modernizer.version>

    <!-- Build Tools -->
    <versions-plugin.version>2.20.1</versions-plugin.version>
  </properties>

  <dependencies>
    <!-- Annotations -->
    <dependency>
      <groupId>org.jspecify</groupId>
      <artifactId>jspecify</artifactId>
      <version>${jspecify.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.gaul</groupId>
      <artifactId>modernizer-maven-annotations</artifactId>
      <version>${modernizer.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>${postgresql.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>${test-containers.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers-junit-jupiter</artifactId>
      <version>${test-containers.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers-postgresql</artifactId>
      <version>${test-containers.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.20.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire.version}</version>
          <configuration>
            <parallel>classes</parallel>
            <threadCount>4</threadCount>
            <reuseForks>true</reuseForks>
            <trimStackTrace>false</trimStackTrace>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <!-- Spotless -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <configuration>
          <java>
            <googleJavaFormat/>
          </java>
          <pom>
            <sortPom>
              <expandEmptyElements>false</expandEmptyElements>
              <sortDependencies>scope,groupId,artifactId</sortDependencies>
              <sortPlugins>groupId,artifactId</sortPlugins>
            </sortPom>
          </pom>
        </configuration>
        <executions>
          <execution>
            <id>spotless</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
      <!-- Spotbugs -->
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>${spotbugs.version}</version>
        <configuration>
          <effort>Max</effort>
          <threshold>Low</threshold>
          <failOnError>true</failOnError>
          <excludeFilterFile>spotbugs-exclude.xml</excludeFilterFile>
          <plugins>
            <plugin>
              <groupId>com.h3xstream.findsecbugs</groupId>
              <artifactId>findsecbugs-plugin</artifactId>
              <version>${findsecbugs.version}</version>
            </plugin>
          </plugins>
        </configuration>
        <executions>
          <execution>
            <id>spotbugs</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>

      <!-- Static analysis -->
      <!-- Checkstyle -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${checkstyle.version}</version>
        <configuration>
          <failOnViolation>true</failOnViolation>
          <configLocation>checkstyle.xml</configLocation>
          <excludes>**/module-info.java</excludes>
        </configuration>
        <executions>
          <execution>
            <id>checkstyle</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
      <!-- Compiler -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler.version}</version>
        <configuration>
          <release>${java.version}</release>
          <compilerArgs>
            <arg>--add-reads</arg>
            <arg>db.documenter=ALL-UNNAMED</arg>
          </compilerArgs>
          <fork>true</fork>
        </configuration>
      </plugin>

      <!-- Enforcer -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${enforcer.version}</version>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>[3.8.1,)</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>${java.version}</version>
                </requireJavaVersion>
                <dependencyConvergence/>
                <requirePluginVersions>
                  <message>All plugins must have explicit versions</message>
                  <banSnapshots>false</banSnapshots>
                </requirePluginVersions>
                <banDuplicatePomDependencyVersions/>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Packaging -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven-jar.version}</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>db.documenter.DbDocumenter</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc.version}</version>
        <executions>
          <!-- Public API Documentation -->
          <execution>
            <id>public-api-docs</id>
            <goals>
              <goal>javadoc</goal>
            </goals>
            <phase>verify</phase>
            <configuration>
              <outputDirectory>${project.build.directory}/site/apidocs</outputDirectory>
              <excludePackageNames>db.documenter.internal.*</excludePackageNames>
              <additionalOptions>
                <additionalOption>--add-reads</additionalOption>
                <additionalOption>db.documenter=ALL-UNNAMED</additionalOption>
              </additionalOptions>
            </configuration>
          </execution>
          <!-- Internal/Contributor Documentation -->
          <execution>
            <id>internal-docs</id>
            <goals>
              <goal>javadoc</goal>
            </goals>
            <phase>verify</phase>
            <configuration>
              <outputDirectory>${project.build.directory}/site/internal-apidocs</outputDirectory>
              <show>private</show>
              <sourcepath>${project.build.sourceDirectory}</sourcepath>
              <subpackages>db.documenter</subpackages>
              <additionalOptions>
                <additionalOption>--add-reads</additionalOption>
                <additionalOption>db.documenter=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.api=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.builder=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.connection=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.connection.api=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.connection.impl=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.connection.impl.postgresql=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.exceptions=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.impl=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.mapper=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.models.db=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.models.doc=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.queries=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.queries.api=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.queries.impl.postgresql=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.queries.impl.postgresql.preparedstatements=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.queries.impl.postgresql.resultsets=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.renderer.api=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.renderer.impl=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.utils=ALL-UNNAMED</additionalOption>
                <additionalOption>--add-exports</additionalOption>
                <additionalOption>db.documenter/db.documenter.internal.validation=ALL-UNNAMED</additionalOption>
              </additionalOptions>
            </configuration>
          </execution>
          <!-- Javadoc JAR for Maven Central -->
          <execution>
            <id>attach-javadoc-jar</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <excludePackageNames>db.documenter.internal.*</excludePackageNames>
              <additionalOptions>
                <additionalOption>--add-reads</additionalOption>
                <additionalOption>db.documenter=ALL-UNNAMED</additionalOption>
              </additionalOptions>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!--  PMD -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>${pmd.version}</version>
        <configuration>
          <linkXRef>false</linkXRef>
          <failOnViolation>true</failOnViolation>
          <printFailingErrors>true</printFailingErrors>
          <skipEmptyReport>false</skipEmptyReport>
          <rulesets>
            <ruleset>pmd-ruleset.xml</ruleset>
          </rulesets>
          <minimumTokens>75</minimumTokens>
          <includeTests>false</includeTests>
          <excludes>
            <exclude>**/module-info.java</exclude>
            <exclude>**/package-info.java</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <id>pmd</id>
            <goals>
              <goal>pmd</goal>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
          <execution>
            <id>cpd-check</id>
            <goals>
              <goal>cpd-check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>

      <!-- Versions Management -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>${versions-plugin.version}</version>
        <configuration>
          <generateBackupPoms>false</generateBackupPoms>
        </configuration>
      </plugin>

      <!-- Legacy Java API management -->
      <plugin>
        <groupId>org.gaul</groupId>
        <artifactId>modernizer-maven-plugin</artifactId>
        <version>${modernizer.version}</version>
        <configuration>
          <javaVersion>${java.version}</javaVersion>
        </configuration>
        <executions>
          <execution>
            <id>modernizer</id>
            <goals>
              <goal>modernizer</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>

      <!-- Reporting -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
            <phase>verify</phase>
          </execution>
          <execution>
            <id>check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>INSTRUCTION</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.80</minimum>
                    </limit>
                    <limit>
                      <counter>BRANCH</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.80</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
